# rust-jvmti

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Simple.java  Switch.java  Test.java  regression-test.sh  testwatch.sh
agent/: Cargo.toml
agent/src/: context.rs  handler.rs  lib.rs
agent/tests/: lib.rs
java/: LambdaTest.java  Test.java  Varying.java  agent.conf
jvmti/: Cargo.toml
jvmti/src/: capabilities.rs  class.rs  event.rs  lib.rs
jvmti/tests/: capabilities.rs  class_test.rs  emulator.rs  lib.rs
src/: agent.rs  benchmark.rs  capabilities.rs  class.rs  config.rs  context.rs  emulator.rs  error.rs  event.rs  event_handler.rs  jvmti_native.rs  lib.rs  main.rs  main_b.rs  method.rs  options.rs  registry.rs  runtime.rs  test.c  thread.rs  util.rs  version.rs
src/backup/: cagent.c  cvoid.c  lib.rs  test.c
src/bc/: mod.rs
src/bc2/: classfile.rs
src/bytecode/: attribute.rs  class_stream.rs  classfile.rs  collections.rs  constant.rs  constants.rs  immutable.rs  io.rs  mod.rs  printer.rs  stream.rs
src/data_store/: memory.rs  mod.rs
src/environment/: jni.rs  jvm.rs  jvmti.rs  mod.rs
src/instrumentation/: mod.rs
src/jvmti_wrapper/: agent_capabilities.rs  class.rs  error.rs  event_callbacks.rs  jni_environment.rs  jvm_agent.rs  jvmti_environment.rs  jvmti_native.rs  method.rs  method_signature.rs  mod.rs  object.rs  thread.rs
src/native/: mod.rs
src/test/: clib.c  cmain.c  jvmti_wrapper.rs  lib.rs
src/wrapper/: agent_capabilities.rs  class.rs  environment.rs  event.rs  method.rs  mod.rs  monitor.rs  object.rs  thread.rs
tests/: agent.rs  capabilities.rs  class.rs  context.rs  emulator.rs  event.rs  lib.rs  options.rs  testing.rs  util.rs  version.rs
tests/app/: mod.rs
tests/bc/: mod.rs
tests/bytecode/: class_stream.rs  collections.rs  constant.rs  constants.rs  mod.rs  raw_bytecode.rs  stream.rs
tests/util/: mod.rs
(+19 files in other folders)
